Added BOUNDS for common setup for sequence-iterating loops in stage3 FORTH
Added region-comment "(" (note that it doesn't nest) to stage3 FORTH
Added hex dump printer DUMP and support words to stage3 FORTH
Added DOES> and supporting words, and used it to make VARIABLE, CONSTANT, and DEFER in stage3 FORTH
Added TUCK, MIN, SPACES, :NONAME, FILL, and <> to stage3 FORTH

** Changed
Minor refactor of stage3 FORTH by reepa
Stage3 FORTH WHILE's compile-time stack effect is now consistent with gforth
Changed behavior of stage2 FORTH's CREATE to better match the way it usually works.

** Fixed
Updated checksums to reflect changes in stage2 FORTH

** Removed
the HERE and DP! are gone from ' now in stage3 FORTH

* 0.0.8 - 2017-06-17
** Added
Incorporated High level prototypes into makefile
Added logic to catch non-existent input files and report a useful error message
Added DP! to stage2 forth
Added EXECUTE to stage2 forth
Added ABORT to stage2 forth
Added string print and address to output of High level prototype disassembler
Added initial prototype library for forth developers who want better ANS support
Expanded stage0 VM Halcode to provide a way to lookup total amount of physical memory

** Changed
Extended VPATH in makefile to shorten dependency names
Updated checksum for stage2 forth
Reversed the order of operands in stage2 forth arithmetic
Modified webIDE to leverage new enhanced disassembler output
Altered stage2 forth KEY to echo keypress so that S" and similiar functions behave like gforth
Altered EXECUTE in stage2 forth to set R12 and load its pointer and jump

** Fixed
Stack offset bug in stage2 forth was found and fixed by reepca in record time
Fixed 2DUP and ?DUP in stage2 forth
Swapped TRUE and FALSE values in stage2 forth to match http://lars.nocrew.org/dpans/dpans3.htm#3.1.3
Adjusted order of comparisions to better match ans
Stack leak in stage2 forth found and corrected
Stage2 forth no longer attempts to parse carriage returns