@@ -174,7 +174,7 @@ Then we use our M0 Line macro assembler to convert our assembly into hex2 format
 Then we need to assemble that hex into our desired program:
 ./bin/vm --rom roms/stage1_assembler-2 --tape_01 temp2 --tape_02 roms/forth --memory 48K
 
-roms/forth should with the sha256sum of 3b54a0248b79b18d7afdbaae8c61e3afd8d3519e394e4f87ae8fd2bef59cde43
+roms/forth should with the sha256sum of 53619f77736729edc06b79d27d835ada6a4235954c467dd0514e312ec4acf3dc
 
 Our forth will first attempt to evaluate any code in tape_01 and then evaluate any code that the user types in
 (Otherwise there is no way for a forth fan to have a chance against the lisp in terms of being able to bootstrap something cool)
