@@ -29,6 +29,7 @@ Added region-comment "(" (note that it doesn't nest) to stage3 FORTH
 Added hex dump printer DUMP and support words to stage3 FORTH
 Added DOES> and supporting words, and used it to make VARIABLE, CONSTANT, and DEFER in stage3 FORTH
 Added TUCK, MIN, SPACES, :NONAME, FILL, and <> to stage3 FORTH
+Added LSHIFT and RSHIFT to stage2 FORTH
 
 ** Changed
 Minor refactor of stage3 FORTH by reepa
